--- a/style.css
+++ b/style.css
@@ -33,15 +33,35 @@ form{
     font-weight: 700;
     line-height: 1.875em;
 }
-label{
-    display: block;
-    margin: 10px 0;
+
+/* 라디오 버튼 숨기기 */
+input[type="radio"] {
+  display: none;
 }
-input[type=radio] {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+
+/* 라벨 스타일 */
+.custom-radio {
+  width: 80%;
+  display: block;
+  padding: 10px 20px;
+  border-radius: 50px; 
+  cursor: pointer;
+  transition: all 0.3s;
+  user-select: none;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  background: #2d4900;
+  color: #ffffff;
 }
+
+/* 선택된 경우 스타일 */
+input[type="radio"]:checked + .custom-radio {
+  background-color: #4caf50;
+  color: white;
+  border-color: #4caf50;
+}
+
 #anbtn{
     width: 250px;
     padding: 20px;
@@ -50,23 +70,74 @@ input[type=radio] {
     font-size: 1.875rem;
     font-weight: 700;
     cursor: pointer;
-    background: #4357ad;
+    background: #1338bd;
     color: #fff;
     margin: 50px auto;
     display: block;
 }
 .modal{
     width: 70%;
-    height: 50%;
-    background: #111;
+    padding: 50px 20px;
+    background: #fcfcfc;
     position: fixed;
-    top: 25%;
+    top: 10%;
     left:15%;
-    border-radius: 10px;
+    border-radius: 50px;
     display: none;
+
 }
 .modal.on{
     display: block;
+}
+
+#clobtn{
+    width: 150px;
+    padding: 10px 20px;
+    border-radius: 50px;
+    background: green;
+    font-size: 40px;
+    color: #fff;
+    font-weight: 900;
+    margin: 5px 10px 0 auto;
+    display: block;
+    cursor: pointer;
+    border: none;
+}
+
+#sco{
+    font-size: 60px;
+    color: #111;
+    margin-top: 20%;
+    text-align: center;
+    animation: countnum 1s ease-in-out forwards;
+    font-weight: 700;
+}
+
+#prize_form{
+    display: none;
+}
+#prize_form label{
+    display: block;
+    width: 30%;
+}
+#prize_form input{
+    padding: 15px 20px;
+}
+#prize_form input::placeholder{
+    color: #111;
+    font-size: 30px;
+}
+
+
+@keyframes countnum {
+  0% {
+    transform: scale(0);  /* 처음에는 크기가 0 */
+    opacity: 0;           /* 투명도도 0 */
+  }
+  100% {
+    transform: scale(1);  /* 끝에는 원래 크기로 */
+    opacity: 1;            /* 투명도가 1 */
+  }
 }
 
 @media(min-width:600px){
@@ -101,9 +172,13 @@ input[type=radio] {
         margin: 55px auto;
     }
     .modal{
-        width: 70%;
-        height: 70%;
+        padding: 50px 20px;
+        top: 15%;
+        left:15%;
     }
+    .custom-radio {
+     width: 100%;
+}
 }
 
 @media(min-width:1024px){
