--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ input[type="radio"]:checked + .custom-radio {
 .modal{
     width: 70%;
     padding: 50px 20px;
+    height: 70vh;
     background: #fcfcfc;
     position: fixed;
     top: 10%;
@@ -118,16 +119,30 @@ input[type="radio"]:checked + .custom-radio {
 }
 #prize_form label{
     display: block;
-    width: 30%;
 }
-#prize_form input{
-    padding: 15px 20px;
+#prize_form #p1{
+    width: 300px;
+    height: 50px;
+    border-radius: 50px;
 }
-#prize_form input::placeholder{
-    color: #111;
-    font-size: 30px;
+#prize_form #p1::placeholder{
+    color: gray;
+    font-size: 24px;
+    margin-top: 10px;
+    opacity: 1;
+    padding-left: 10px;
 }
-
+.moin_btn{
+    width: 200px;
+    padding: 10px 0;
+    display: block;
+    margin: 20px auto;
+    background: #1338bd;
+    font-size: 36px;
+    color: #fff;
+    font-weight: 700;
+    cursor: pointer;
+}
 
 @keyframes countnum {
   0% {
@@ -173,12 +188,19 @@ input[type="radio"]:checked + .custom-radio {
     }
     .modal{
         padding: 50px 20px;
-        top: 15%;
+        height: 80vh;
+        top: 5%;
         left:15%;
     }
     .custom-radio {
      width: 100%;
+    }
+    #prize_form #p1{
+    width: 100%;
+    height: 50px;
+    border-radius: 50px;
 }
+
 }
 
 @media(min-width:1024px){
@@ -201,6 +223,7 @@ input[type="radio"]:checked + .custom-radio {
     label{
         margin: 0 auto;
     }
+
     input[type=radio] {
         width: 50px;
         height: 50px;
@@ -211,5 +234,10 @@ input[type="radio"]:checked + .custom-radio {
         font-size: 4rem;
         margin: 55px auto;
     }
-
+    .modal{
+        overflow-y: auto;
+    }
+    #prize_box #p1{
+        padding: 10px 0;
+    }
 }
